update JINFO.md